--- a/src/jsx/components/UI/button/CustomButton.module.css
+++ b/src/jsx/components/UI/button/CustomButton.module.css
@@ -2,10 +2,12 @@
   cursor: pointer;
   width: auto;
   text-align: center;
+  display: flex;
+  gap: 8px;
   padding-top: 8px;
   padding-bottom: 8px;
-  padding-right: 12px;
-  padding-left: 12px;
+  padding-right: 8px;
+  padding-left: 8px;
   border-radius: 8px;
   color: var(--primary-color);
   border: none;
