--- a/src/jsx/components/SearchBar/SearchBar.module.css
+++ b/src/jsx/components/SearchBar/SearchBar.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-start;
   column-gap: 8px;
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   border-color: #f7f5f5;
 }
